--- a/orders/templates/orders/create_order.html
+++ b/orders/templates/orders/create_order.html
@@ -21,5 +21,15 @@
         <button type="submit">Create Order</button>
 
     </form>
+    <hr>
+    <a href="{% url 'orders:order_list' %}">Back to Order List</a>
+
+    
+
+
+
+
+
+
 </body>
 </html>
